--- a/lab-pv-system/package.json
+++ b/lab-pv-system/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.3",
+    "mongoose-sequence": "^5.2.2",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
