--- a/lab-pv-system/package.json
+++ b/lab-pv-system/package.json
@@ -20,14 +20,21 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@angular/service-worker": "~9.0.1",
     "@types/googlemaps": "^3.39.3",
+    "angularfire": "^2.3.0",
+    "angularfire2": "^5.4.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.11.0",
+    "googleapis": "^48.0.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.3",
     "mongoose-sequence": "^5.2.2",
     "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "web-push": "^3.4.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
